--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "rollup-plugin-css-porter": "^0.1.2",
     "rollup-plugin-hash": "^1.3.0",
     "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-serve": "^0.6.0",
     "rollup-plugin-terser": "^1.0.1"
   },
   "dependencies": {
