--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/bundle.js",
   "scripts": {
     "clean": "del /F /S /Q dist",
-    "build": "npm run clean && rollup -c"
+    "build": "npm run clean && rollup -c --watch"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,7 @@
     "rollup-plugin-cpy": "^1.0.0",
     "rollup-plugin-css-porter": "^0.1.2",
     "rollup-plugin-hash": "^1.3.0",
+    "rollup-plugin-livereload": "^0.6.0",
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-serve": "^0.6.0",
     "rollup-plugin-terser": "^1.0.1"
