--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,12 @@
 {
     "presets": [
+      "stage-0",
+      [
+        "es2015",
+        {
+          "modules": false
+        }
+      ],
       [
         "env",
         { "modules": false }
