--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "babel-core": "^6.26.3",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.0.15",
+    "babel-preset-stage-0": "^6.0.15",
     "rollup": "^0.64.1",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "^9.1.8",
@@ -34,6 +36,8 @@
     "rollup-plugin-terser": "^1.0.1"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
+    "scanex-auth": "git+https://git@github.com/Scanex/Authentication.git",
     "scanex-translations": "git+https://github.com/Scanex/Translations.git"
   }
 }
