Events && auth component && package.json

--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
-    "scanex-auth": "git+https://git@github.com/Scanex/Authentication.git",
-    "scanex-translations": "git+https://github.com/Scanex/Translations.git"
+    "scanex-auth": "git+ssh://git@ssh.github.com:443/Scanex/Authentication.git",
+    "scanex-translations": "git+https://github.com/Scanex/Translations.git",
+    "underscore": "^1.9.1"
   }
 }
