Language change widget was added

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "scanex-auth": "git+ssh://git@ssh.github.com:443/Scanex/Authentication.git",
     "scanex-translations": "git+https://github.com/Scanex/Translations.git",
     "scanex-float-panel": "git+https://github.com/Scanex/FloatingPanel.git",
+    "scanex-lang-widget": "git+https://github.com/Scanex/LanguageWidget.git",
     "underscore": "^1.9.1"
   }
 }
