Base layer control was added

--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
+    "leaflet-geomixer": "git+https://github.com/ScanEx/Leaflet-GeoMixer.git",
+    "leaflet-iconlayers": "git+https://github.com/ScanEx/Leaflet-IconLayers.git",
     "scanex-auth": "git+ssh://git@ssh.github.com:443/Scanex/Authentication.git",
     "scanex-translations": "git+https://github.com/Scanex/Translations.git",
     "scanex-float-panel": "git+https://github.com/Scanex/FloatingPanel.git",
