Some installs && some refactoring && data store modifying

--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "scanex-translations": "git+https://github.com/Scanex/Translations.git",
     "scanex-float-panel": "git+https://github.com/Scanex/FloatingPanel.git",
     "scanex-lang-widget": "git+https://github.com/Scanex/LanguageWidget.git",
+    "scanex-color-picker": "git+https://github.com/Scanex/ColorPicker.git",
+    "scanex-datagrid": "git+https://github.com/Scanex/DataGrid.git",
+    "scanex-event-target": "git+https://github.com/Scanex/EventTarget.git",
     "underscore": "^1.9.1"
   }
 }
