--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
-    "rollup": "^0.64.1",
+    "rollup": "^0.66.2",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "^9.1.8",
     "rollup-plugin-copy-assets": "^1.0.0",
@@ -33,7 +33,8 @@
     "rollup-plugin-livereload": "^0.6.0",
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-serve": "^0.6.0",
-    "rollup-plugin-terser": "^1.0.1"
+    "rollup-plugin-terser": "^1.0.1",
+    "rollup-plugin-uglify": "^6.0.0"
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
