Service commit && providers && Sidebar

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "scanex-datagrid": "git+https://github.com/Scanex/DataGrid.git",
     "scanex-event-target": "git+https://github.com/Scanex/EventTarget.git",
     "scanex-leaflet-sidebar": "git+https://github.com/Scanex/Leaflet.Sidebar.git",
+    "scanex-search-input": "git+https://github.com/Scanex/SearchInput.git",
     "underscore": "^1.9.1"
   }
 }
