Refactoring && searchTab && loader widget

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "scanex-leaflet-sidebar": "git+https://github.com/Scanex/Leaflet.Sidebar.git",
     "scanex-search-input": "git+https://github.com/Scanex/SearchInput.git",
     "scanex-slider-widget": "git+https://github.com/Scanex/SliderWidget.git",
+    "scanex-loader-widget": "git+https://github.com/Scanex/LoaderWidget.git",
     "scanex-tristate": "git+https://github.com/Scanex/TristateCheckbox.git",
     "underscore": "^1.9.1",
     "pikaday": "^1.7.0"
