--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "scanex-async": "git+https://git@github.com/Scanex/Async.git",
     "scanex-object-extensions": "git+https://github.com/Scanex/Object.Extensions.git",
     "underscore": "^1.9.1",
-    "pikaday": "^1.7.0"
+    "pikaday": "^1.7.0",
+    "nodelist-foreach-polyfill": "^1.2.0"
   }
 }
