--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-serve": "^0.6.0",
     "rollup-plugin-terser": "^1.0.1",
-    "rollup-plugin-uglify": "^6.0.0"
+    "rollup-plugin-uglify": "^6.0.0",
+    "svelte": "^2.15.2",
+    "rollup-plugin-svelte": "^4.3.2"
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
