--- a/package.json
+++ b/package.json
@@ -26,40 +26,41 @@
     "rollup": "^0.66.2",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "^9.1.8",
-    "rollup-plugin-copy-assets": "^1.0.0",
+    "rollup-plugin-copy-assets": "^1.1.0",
     "rollup-plugin-cpy": "^1.0.0",
     "rollup-plugin-css-porter": "^0.1.2",
     "rollup-plugin-hash": "^1.3.0",
     "rollup-plugin-includepaths": "^0.2.3",
     "rollup-plugin-livereload": "^0.6.0",
     "rollup-plugin-node-resolve": "^3.4.0",
-    "rollup-plugin-serve": "^0.6.0",
-    "rollup-plugin-svelte": "^4.3.2",
+    "rollup-plugin-serve": "^0.6.1",
+    "rollup-plugin-svelte": "^4.5.0",
     "rollup-plugin-terser": "^1.0.1",
     "rollup-plugin-uglify": "^6.0.0",
-    "svelte": "^2.15.2"
+    "svelte": "^2.16.0"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
+    "@babel/polyfill": "^7.2.5",
     "leaflet-geomixer": "git+https://github.com/ScanEx/Leaflet-GeoMixer.git",
     "leaflet-iconlayers": "git+https://github.com/ScanEx/Leaflet-IconLayers.git",
+    "nodelist-foreach-polyfill": "^1.2.0",
+    "pikaday": "^1.7.0",
+    "scanex-async": "git+https://git@github.com/Scanex/Async.git",
     "scanex-auth": "git+ssh://git@ssh.github.com:443/Scanex/Authentication.git",
-    "scanex-translations": "git+https://github.com/Scanex/Translations.git",
-    "scanex-float-panel": "git+https://github.com/Scanex/FloatingPanel.git",
-    "scanex-lang-widget": "git+https://github.com/Scanex/LanguageWidget.git",
     "scanex-color-picker": "git+https://github.com/Scanex/ColorPicker.git",
     "scanex-datagrid": "git+https://github.com/Scanex/DataGrid.git",
     "scanex-event-target": "git+https://github.com/Scanex/EventTarget.git",
+    "scanex-float-panel": "git+https://github.com/Scanex/FloatingPanel.git",
+    "scanex-lang-widget": "git+https://github.com/Scanex/LanguageWidget.git",
     "scanex-leaflet-sidebar": "git+https://github.com/Scanex/Leaflet.Sidebar.git",
-    "scanex-search-input": "git+https://github.com/Scanex/SearchInput.git",
-    "scanex-slider-widget": "git+https://github.com/Scanex/SliderWidget.git",
     "scanex-loader-widget": "git+https://github.com/Scanex/LoaderWidget.git",
     "scanex-notify-widget": "git+https://github.com/Scanex/NotificationWidget.git",
-    "scanex-tristate": "git+https://github.com/Scanex/TristateCheckbox.git",
-    "scanex-async": "git+https://git@github.com/Scanex/Async.git",
     "scanex-object-extensions": "git+https://github.com/Scanex/Object.Extensions.git",
-    "underscore": "^1.9.1",
-    "pikaday": "^1.7.0",
-    "nodelist-foreach-polyfill": "^1.2.0"
+    "scanex-search-input": "git+https://github.com/Scanex/SearchInput.git",
+    "scanex-slider-widget": "git+https://github.com/Scanex/SliderWidget.git",
+    "scanex-translations": "git+https://github.com/Scanex/Translations.git",
+    "scanex-tristate": "git+https://github.com/Scanex/TristateCheckbox.git",
+    "tingle.js": "^0.13.2",
+    "underscore": "^1.9.1"
   }
 }
